# sparse-tensor

./: .gitignore  .travis.yml  BasicTensors.hs  EquivarianceEqns.hs  HaskellTensor.aux  HaskellTensor.cabal  HaskellTensor.hp  HaskellTensor.prof  HaskellTensor.ps  HaskellTensor1.prof  HaskellTensor2.prof  HaskellTensor2.ps  HaskellTensor3.ps  HaskellTensor4.ps  HaskellTensor6.ps  HaskellTensor7.ps  HaskellTensorAnsatzSeq.prof  HaskellTensorEps14.prof  HaskellTensorEps14RecComp.prof  HaskellTensorEps14_2.prof  HaskellTensor_oldTensProd.prof  HaskellTensor_typeSafe.prof  Index.hs  Ivar.hs  Main.hs  Pde.hs  README.md  Tensor.hs  config.yaml  sparse-tensor.cabal  stack.hp  stack.yaml
.stack-work/install/x86_64-osx/lts-12.11/8.4.3/flag-cache/: HaskellTensor-0.1.0.0  intero-0.1.32  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ
HaskellTensor/: HaskellTensor.cabal  README.md
HaskellTensor/.stack-work/install/x86_64-osx/lts-12.11/8.4.3/flag-cache/: HaskellTensor-0.1.0.0
HaskellTensor/src/: EquivarianceMetric.hs  Main.hs  Pde.hs
calculations/area-density-2nd-derivative/: .gitignore  LICENSE  README.md  package.yaml  stack.yaml
calculations/area-density-2nd-derivative/src/: Main.hs
package/: CHANGELOG.md  LICENSE  README.md  Setup.hs  cabal.project  sparse-tensor.cabal  stack.yaml
package/src/Math/: Tensor.hs
package/src/Math/Tensor/: LorentzGenerator.hs
package/src/Math/Tensor/Examples/: Gravity.hs
package/src/Math/Tensor/Examples/Gravity/: DiffeoSymEqns.hs  Schwarzschild.hs  SchwarzschildSymbolic.hs
package/src/Math/Tensor/Internal/: LinearAlgebra.hs
package/test/: Ansatz.hs  IndList.hs  LinearAlgebra.hs  Serialization.hs  TestMain.hs
src/: Ansatz.hs  AnsatzEqns2.hs  AnsatzEquations.hs  AnsatzMatrices.hs  BasicTens.hs  BasicTensor4_2.hs  BasicTensors.hs  BasicTensors4_2.hs  BasicTensorsMap.hs  BenchmarkEigen.hs  BinaryTree.hs  CausalAnalysis.mpl  DiffeoEquations.hs  DiffeoMatrices.hs  EquivarianceEqns.hs  EquivarianceMetric.hs  FlatEqns.hs  FlatTensorEquations.hs  GenericTensorEquations.hs  HList.hs  Index.hs  IndexMap.hs  IntEquations.hs  IntMatrices.hs  Integrabillity.hs  Intertwiners.hs  Ivar.hs  LorentzGenerator.hs  Main.hs  Matrices.hs  Order1Int.hs  Order2Int.hs  Order3Int.hs  Pde.hs  Perturbation.hs  PerturbationTree.hs  PerturbationTree2.hs  PerturbationTree2_2.hs  PerturbationTree2_3.hs  PerturbationTree3.hs  (+20 more)
src-exec/: Main.hs
src/Math/: Tensor.hs
src/Math/Tensor/: LorentzGenerator.hs
src/Math/Tensor/Examples/: Gravity.hs
src/Math/Tensor/Examples/Gravity/: DiffeoSymEqns.hs
