name:                HaskellTensor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellTensor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskellTensor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, tf-random, split, ghc-typelits-natnormalise, ghc-typelits-knownnat, eigen, matrix, vector, hmatrix
  other-modules:       BasicTensors, EquivarianceEqns, EquivarianceMetric, Index, Ivar, Pde, Tensor, Integrabillity, Ansatz, Symmetrize,
                       Perturbation, AnsatzEqns2, Order2Int, Order3Int, IndexMap, TensorMap, BasicTensorsMap, Order1Int, PerturbationTree,
                       PerturbationTree2, Tensor2, TensorF, TensorInt, TensorTreeNumeric, TensorTreeNumeric2, TensorTreeIntCond, BinaryTree, TensorTreeNumeric3, PerturbationTree3, PerturbationTree4,
                       PerturbationTree5, PerturbationTree2_2, TensorTreeNumeric4
  ghc-options:         -O -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields 
