name:                HaskellTensor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellTensor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskellTensor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, tf-random, split, ghc-typelits-natnormalise, ghc-typelits-knownnat, eigen, parallel, deepseq, cereal, singletons, bytestring, zlib, criterion
  other-modules:       TensorTreeNumeric4_2, BasicTensor4_2, PerturbationTree2_3, TensorEquations
  ghc-options:         -j -O2 -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields
  
