name:                sparse-tensor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tobireinhart/sparse-tensor#readme
license:             MIT
license-file:        LICENSE
author:              Tobias Reinhart and Nils Alex
maintainer:          tobi.reinhart@fau.de
copyright:           2018 Tobias Reinhart and Nils Alex
category:            Data, Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, tf-random, ghc-typelits-natnormalise, ghc-typelits-knownnat, eigen <= 3.3.4.1, parallel, deepseq, cereal, singletons, bytestring, zlib, criterion
  exposed-modules:     Math.Tensor
                       Math.Tensor.LorentzGenerator
                       Math.Tensor.Examples.Gravity
                       Math.Tensor.Examples.Gravity.DiffeoSymEqns
  ghc-options:         -j -O2 -funbox-strict-fields

executable run
  main-is:             Main.hs
  build-depends:       base >=4.7 && < 5, sparse-tensor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src-exec
  default-language:    Haskell2010
