name:                sparse-tensor
version:             0.1.0.0
synopsis:            typesafe tensor algebra
-- description:
homepage:            https://github.com/TobiReinhart/sparse-tensor#readme
license:             MIT
license-file:        LICENSE
author:              Tobias Reinhart and Nils Alex
maintainer:          tobi.reinhart@fau.de, nils.alex@fau.de
copyright:           2019 Tobias Reinhart and Nils Alex
category:            Data, Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: git://github.com/TobiReinhart/sparse-tensor.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ghc >= 8.0.1 && < 8.6,
                       containers,
                       tf-random,
                       ghc-typelits-natnormalise,
                       ghc-typelits-knownnat,
                       eigen == 3.3.4.1,
                       parallel,
                       deepseq,
                       cereal,
                       singletons,
                       bytestring,
                       zlib
  exposed-modules:     Math.Tensor
                       Math.Tensor.LorentzGenerator
                       Math.Tensor.Examples.Gravity
                       Math.Tensor.Examples.Gravity.DiffeoSymEqns
  ghc-options:         -funbox-strict-fields
