name:                sparse-tensor
version:             0.1.0.0
synopsis:            typesafe tensor algebra
-- description:
homepage:            https://github.com/TobiReinhart/sparse-tensor#readme
license:             MIT
license-file:        LICENSE
author:              Tobias Reinhart and Nils Alex
maintainer:          tobi.reinhart@fau.de, nils.alex@fau.de
copyright:           2019 Tobias Reinhart and Nils Alex
category:            Data, Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: git://github.com/TobiReinhart/sparse-tensor.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base                       >= 4.7 && < 5,
                       containers                 >= 0.5.7 && < 0.7,
                       tf-random                  >= 0.5 && < 0.6,
                       ghc-typelits-natnormalise  >= 0.6.2 && < 0.7,
                       ghc-typelits-knownnat      >= 0.5.1 && < 0.7,
                       eigen                      == 3.3.4.1,
                       parallel                   >= 3.2.2 && < 3.3,
                       deepseq                    >= 1.4.2 && < 1.5,
                       cereal                     >= 0.5.7 && < 0.6,
                       singletons                 >= 2.4.1 && < 2.6,
                       bytestring                 >= 0.10.8 && < 0.11,
                       zlib                       >= 0.6.2 && < 0.7
  exposed-modules:     Math.Tensor
                       Math.Tensor.LorentzGenerator
                       Math.Tensor.Examples.Gravity
                       Math.Tensor.Examples.Gravity.DiffeoSymEqns
  ghc-options:         -funbox-strict-fields
